--- a/index.html
+++ b/index.html
@@ -1,309 +1,127 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Crazy Mandem | Play the Drop 🚗💨</title>
-  <meta name="description" content="Crazy Mandem — UK street culture & loud car vibes. Play the Drop, an endless lane‑splitter web game. Built to run 100% free on GitHub Pages." />
-  <meta property="og:title" content="Crazy Mandem | Play the Drop" />
-  <meta property="og:description" content="Endless lane‑splitter web game + links to YouTube & socials." />
-  <meta property="og:type" content="website" />
-  <meta name="theme-color" content="#0ea5e9" />
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>🚗</text></svg>">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Migrant Boat Game</title>
   <style>
-    :root{
-      --bg: #0b0f14; --card:#0f1720; --text:#e5f2ff; --muted:#9fb7cc; --accent:#22d3ee; --accent2:#60a5fa; --good:#34d399; --bad:#f97316;
-      --shadow: 0 10px 30px rgba(0,0,0,.35), inset 0 1px rgba(255,255,255,.04)
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: linear-gradient(to top, #1e3c72, #2a5298);
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      color:var(--text); background:radial-gradient(1200px 800px at 70% -20%, #10324d 0%, transparent 60%),
-               radial-gradient(1200px 800px at -10% 120%, #102a40 0%, transparent 60%), var(--bg);
-      display:flex; align-items:center; justify-content:center; padding:18px;
+    canvas {
+      display: block;
+      margin: 0 auto;
+      background: url('https://i.ibb.co/6vM6Kd0/ocean.png') repeat-x;
     }
-    .wrap{max-width:1100px; width:100%; display:grid; grid-template-columns: 1.1fr .9fr; gap:18px}
-    @media (max-width: 980px){.wrap{grid-template-columns:1fr;}}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0)); border:1px solid rgba(255,255,255,.08); border-radius:22px; box-shadow:var(--shadow)}
-    header.card{padding:18px 20px; display:flex; align-items:center; justify-content:space-between}
-    header .brand{display:flex; align-items:center; gap:12px}
-    .logo{width:42px; height:42px; display:grid; place-items:center; border-radius:12px; background:linear-gradient(135deg, var(--accent2), var(--accent)); box-shadow:inset 0 -3px 10px rgba(0,0,0,.25)}
-    .brand h1{font-size:18px; margin:0}
-    .links{display:flex; gap:10px; flex-wrap:wrap}
-    .btn{padding:9px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.12); background:#0e1620aa; color:var(--text); text-decoration:none; font-weight:600; backdrop-filter: blur(6px)}
-    .btn:hover{transform:translateY(-1px)}
-
-    .hero.card{padding:18px; display:grid; grid-template-columns:1fr; gap:12px}
-    .hero h2{margin:0; font-size:28px}
-    .hero p{margin:0; color:var(--muted)}
-
-    .game.card{padding:14px; display:grid; gap:12px}
-    .bar{display:flex; align-items:center; justify-content:space-between; gap:10px}
-    .stat{font-weight:700}
-    .stat small{color:var(--muted); font-weight:600}
-    canvas{width:100%; height:auto; border-radius:18px; background:linear-gradient(#0b0f14, #0a121b)}
-    .controls{display:flex; gap:10px; flex-wrap:wrap}
-    .controls .btn{background:#0b1220}
-    .hint{color:var(--muted); font-size:13px}
-    footer.card{padding:16px; text-align:center; color:var(--muted)}
-
-    /* Touch controls */
-    .touchbar{display:none; grid-template-columns:repeat(3,1fr); gap:10px}
-    .tbtn{padding:12px 10px; border-radius:12px; border:1px solid rgba(255,255,255,.1); background:#0b1220; text-align:center; font-weight:800}
-    @media (hover:none) and (pointer:coarse){ .touchbar{display:grid} }
+    #info {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      font-size: 18px;
+    }
+    a {
+      color: yellow;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <header class="card">
-      <div class="brand">
-        <div class="logo">🏁</div>
-        <div>
-          <h1>Crazy Mandem</h1>
-          <div class="hint">UK street culture • loud car content • quick plays</div>
-        </div>
-      </div>
-      <nav class="links">
-        <a class="btn" href="https://www.youtube.com/" target="_blank" rel="noopener">YouTube</a>
-        <a class="btn" href="#game">Play Game</a>
-        <a class="btn" href="#links">Links</a>
-      </nav>
-    </header>
-
-    <section class="hero card">
-      <div>
-        <h2>Play <span style="color:var(--accent)">THE DROP</span> 🚗💨</h2>
-        <p>Endless lane‑splitter: dodge traffic, grab coins, rack up score. Arrow keys / A‑D / tap to move. Built with vanilla JS — runs anywhere.</p>
-      </div>
-      <div class="controls">
-        <button class="btn" id="startBtn">▶ Start</button>
-        <button class="btn" id="pauseBtn">⏸ Pause</button>
-        <button class="btn" id="resetBtn">🔄 Restart</button>
-        <span class="hint">Desktop: ← → or A / D • Mobile: tap left / right • P = pause</span>
-      </div>
-    </section>
-
-    <section class="game card" id="game">
-      <div class="bar">
-        <div class="stat">Score: <span id="score">0</span> <small>(best <span id="best">0</span>)</small></div>
-        <div class="stat">Speed: <span id="speed">1.0x</span></div>
-      </div>
-      <canvas id="play" width="520" height="780" aria-label="Game canvas" role="img"></canvas>
-      <div class="touchbar">
-        <div class="tbtn" data-dir="left">⟵</div>
-        <div class="tbtn" data-dir="brake">⏸</div>
-        <div class="tbtn" data-dir="right">⟶</div>
-      </div>
-    </section>
-
-    <section class="card" id="links" style="padding:16px">
-      <h3 style="margin:6px 0 8px">Links & Contact</h3>
-      <p class="hint">Swap these with your real links later.</p>
-      <div class="links">
-        <a class="btn" href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a>
-        <a class="btn" href="mailto:business@yourdomain.com">Business Email</a>
-        <a class="btn" href="https://tiktok.com/" target="_blank" rel="noopener">TikTok</a>
-      </div>
-    </section>
-
-    <footer class="card">
-      <small>© <span id="year"></span> Crazy Mandem. Built with plain HTML/JS/CSS. Host it free on GitHub Pages.</small>
-    </footer>
+  <div id="info">
+    Score: <span id="score">0</span> | 
+    <a href="https://www.youtube.com/@CrazyMandem" target="_blank">Visit my YouTube</a>
   </div>
+  <canvas id="gameCanvas" width="600" height="400"></canvas>
 
-<script>
-(() => {
-  const canvas = document.getElementById('play');
-  const ctx = canvas.getContext('2d');
-  const W = canvas.width, H = canvas.height;
-  const lanes = 3; // 3-lane road
-  const laneW = W * 0.22; // each lane width proportion
-  const roadW = laneW * lanes;
-  const roadX = (W - roadW) / 2;
-  const carW = laneW * 0.6, carH = carW * 1.5;
-  const colors = { lane:'#0f2233', line:'#1e3a5f', car:'#22d3ee', enemy:'#f97316', coin:'#f4f08b' };
+  <script>
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
 
-  let state = {
-    running: false,
-    paused: false,
-    t: 0,
-    speed: 5, // base scroll speed
-    score: 0,
-    best: Number(localStorage.getItem('drop_best') || 0),
-    playerLane: 1,
-    yOffset: 0,
-    enemies: [],
-    coins: []
-  };
+    // Boat player
+    const boat = {
+      x: 50,
+      y: canvas.height / 2 - 25,
+      width: 50,
+      height: 30,
+      speed: 5
+    };
 
-  function reset() {
-    state.running = false; state.paused = false; state.t = 0; state.speed = 5; state.score = 0; state.playerLane = 1; state.yOffset = 0; state.enemies = []; state.coins = [];
-    ui(); drawSplash();
-  }
+    // Obstacles (waves and coast patrol)
+    const obstacles = [];
+    let frameCount = 0;
+    let score = 0;
+    const scoreEl = document.getElementById('score');
 
-  function start(){ if(!state.running){ state.running = true; state.paused = false; loop(); }}
-  function pause(){ state.paused = !state.paused; ui(); }
+    // Controls
+    const keys = {};
+    window.addEventListener('keydown', e => keys[e.key] = true);
+    window.addEventListener('keyup', e => keys[e.key] = false);
 
-  // Helpers
-  const laneX = (i)=> roadX + i*laneW + (laneW - carW)/2;
-  function rand(min,max){ return Math.random()*(max-min)+min; }
-  function chance(p){ return Math.random() < p; }
+    function spawnObstacle() {
+      const height = Math.random() * 50 + 20;
+      const y = Math.random() * (canvas.height - height);
+      obstacles.push({x: canvas.width, y: y, width: 30, height: height});
+    }
 
-  // Spawn logic (difficulty ramps with score)
-  function maybeSpawn() {
-    const difficulty = 0.2 + Math.min(state.score/1000, 1.2); // grows over time
-    if (chance(0.03 * difficulty)) {
-      // spawn enemy in random lane not overcrowded
-      const used = new Set(state.enemies.filter(e=>H-e.y<carH*2).map(e=>e.lane));
-      const opts = [0,1,2].filter(i=>!used.has(i));
-      if(opts.length){
-        const lane = opts[Math.floor(rand(0, opts.length))];
-        state.enemies.push({ lane, y: -carH - rand(0, 120), speed: state.speed * rand(0.9, 1.3) });
+    function update() {
+      // Move boat
+      if (keys['ArrowUp'] && boat.y > 0) boat.y -= boat.speed;
+      if (keys['ArrowDown'] && boat.y + boat.height < canvas.height) boat.y += boat.speed;
+
+      // Spawn obstacles
+      frameCount++;
+      if (frameCount % 90 === 0) spawnObstacle();
+
+      // Move obstacles
+      for (let i = obstacles.length - 1; i >= 0; i--) {
+        obstacles[i].x -= 4;
+        if (obstacles[i].x + obstacles[i].width < 0) {
+          obstacles.splice(i, 1);
+          score++;
+          scoreEl.textContent = score;
+        }
       }
-    }
-    if (chance(0.02)) {
-      const lane = Math.floor(rand(0,3));
-      state.coins.push({ lane, y: -20, r: 10 });
-    }
-  }
 
-  // Input
-  function move(dir){
-    if(!state.running || state.paused) return;
-    state.playerLane = Math.max(0, Math.min(2, state.playerLane + dir));
-  }
-  addEventListener('keydown', e=>{
-    if(e.key==='ArrowLeft'||e.key==='a') move(-1);
-    if(e.key==='ArrowRight'||e.key==='d') move(1);
-    if(e.key==='p') pause();
-    if((e.key===' '||e.key==='Enter') && !state.running) start();
-  });
-  document.querySelectorAll('.tbtn').forEach(b=>{
-    b.addEventListener('touchstart', ev=>{
-      const dir = b.dataset.dir;
-      if(dir==='left') move(-1); else if(dir==='right') move(1); else pause();
-      ev.preventDefault();
-    }, {passive:false});
-  });
-  document.getElementById('startBtn').onclick = start;
-  document.getElementById('pauseBtn').onclick = pause;
-  document.getElementById('resetBtn').onclick = reset;
-
-  // Draw
-  function drawRoad(){
-    // asphalt
-    ctx.fillStyle = '#081019';
-    ctx.fillRect(roadX-18, 0, roadW+36, H);
-    // lanes + scrolling dashes
-    for(let i=0;i<=lanes;i++){
-      ctx.fillStyle = colors.lane;
-      ctx.fillRect(roadX+i*laneW-2, 0, 4, H);
-    }
-    ctx.fillStyle = colors.line;
-    const dashH = 28, gap = 22, total = dashH+gap;
-    for(let i=0;i<lanes;i++){
-      const x = roadX + i*laneW + laneW/2 - 2;
-      for(let y=-total; y<H+total; y+=total){
-        const yy = y + (state.yOffset % total);
-        ctx.fillRect(x, yy, 4, dashH);
-      }
-    }
-  }
-  function drawCar(x,y,clr){
-    ctx.fillStyle = clr; ctx.strokeStyle = 'rgba(0,0,0,.35)'; ctx.lineWidth=2;
-    ctx.beginPath(); ctx.roundRect(x, y, carW, carH, 10); ctx.fill(); ctx.stroke();
-    // windows
-    ctx.fillStyle = 'rgba(255,255,255,.2)';
-    ctx.fillRect(x+carW*0.18, y+carH*0.15, carW*0.64, carH*0.28);
-    ctx.fillRect(x+carW*0.18, y+carH*0.52, carW*0.64, carH*0.28);
-  }
-  function drawCoin(x,y,r){
-    ctx.fillStyle = colors.coin; ctx.beginPath(); ctx.arc(x,y,r,0,Math.PI*2); ctx.fill();
-    ctx.fillStyle = 'rgba(0,0,0,.25)'; ctx.fillRect(x-r*0.15, y-r*0.8, r*0.3, r*1.6);
-  }
-
-  function rectsOverlap(ax,ay,aw,ah,bx,by,bw,bh){
-    return ax<bx+bw && ax+aw>bx && ay<by+bh && ay+ah>by;
-  }
-
-  function drawSplash(){
-    ctx.clearRect(0,0,W,H); drawRoad();
-    ctx.fillStyle = 'rgba(0,0,0,.35)'; ctx.fillRect(20, H*0.2, W-40, H*0.6);
-    ctx.fillStyle = '#e6f3ff'; ctx.textAlign='center';
-    ctx.font = '700 36px system-ui, sans-serif'; ctx.fillText('THE DROP', W/2, H*0.42);
-    ctx.font = '16px system-ui, sans-serif';
-    ctx.fillStyle = '#b8cfe3';
-    ctx.fillText('Arrow keys / A‑D or tap to move', W/2, H*0.48);
-    ctx.fillText('Grab coins • Dodge traffic • P to pause', W/2, H*0.52);
-    ctx.fillText('Press Start or Space to play', W/2, H*0.56);
-  }
-
-  function ui(){
-    document.getElementById('score').textContent = Math.floor(state.score);
-    document.getElementById('best').textContent = state.best;
-    document.getElementById('speed').textContent = (state.speed/5).toFixed(1)+'x';
-  }
-
-  function loop(){
-    if(!state.running){ drawSplash(); return; }
-    if(state.paused){ requestAnimationFrame(loop); return; }
-
-    state.t += 1; state.yOffset += state.speed; state.score += state.speed*0.2;
-    if(state.t % 240 === 0) state.speed += 0.5; // ramp difficulty
-
-    maybeSpawn();
-
-    // Update enemies & coins
-    state.enemies.forEach(e=>{ e.y += e.speed; });
-    state.coins.forEach(c=>{ c.y += state.speed; });
-    state.enemies = state.enemies.filter(e=> e.y < H + carH);
-    state.coins = state.coins.filter(c=> c.y < H + 30);
-
-    // Drawing
-    ctx.clearRect(0,0,W,H);
-    drawRoad();
-
-    // Player
-    const px = laneX(state.playerLane), py = H - carH - 20; 
-    drawCar(px, py, colors.car);
-
-    // Enemies
-    for(const e of state.enemies){
-      drawCar(laneX(e.lane), e.y, colors.enemy);
-      if(rectsOverlap(px,py,carW,carH, laneX(e.lane), e.y, carW, carH)){
-        // crash
-        state.best = Math.max(state.best, Math.floor(state.score));
-        localStorage.setItem('drop_best', state.best);
-        state.running = false; ui();
-        // crash flash
-        ctx.fillStyle = 'rgba(249,115,22,.25)'; ctx.fillRect(0,0,W,H);
-        ctx.fillStyle = '#fff'; ctx.font='700 30px system-ui, sans-serif'; ctx.textAlign='center';
-        ctx.fillText('CRASHED!', W/2, H*0.45);
-        ctx.fillStyle = '#b8cfe3'; ctx.font='16px system-ui, sans-serif';
-        ctx.fillText('Score '+Math.floor(state.score)+' • Best '+state.best, W/2, H*0.5);
-        ctx.fillText('Press Restart to go again', W/2, H*0.55);
+      // Check collision
+      for (let obs of obstacles) {
+        if (boat.x < obs.x + obs.width &&
+            boat.x + boat.width > obs.x &&
+            boat.y < obs.y + obs.height &&
+            boat.y + boat.height > obs.y) {
+          alert('Game Over! You tried to reach the UK.');
+          score = 0;
+          scoreEl.textContent = score;
+          boat.y = canvas.height / 2 - 25;
+          obstacles.length = 0;
+        }
       }
     }
 
-    // Coins
-    for(let i=state.coins.length-1;i>=0;i--){
-      const c = state.coins[i];
-      const cx = laneX(c.lane) + carW/2, cy = c.y + 18;
-      drawCoin(cx,cy,c.r);
-      if(rectsOverlap(px,py,carW,carH, cx-c.r,cy-c.r,c.r*2,c.r*2)){
-        state.score += 20; state.coins.splice(i,1);
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Draw boat
+      ctx.fillStyle = '#FFD700';
+      ctx.fillRect(boat.x, boat.y, boat.width, boat.height);
+
+      // Draw obstacles
+      ctx.fillStyle = '#FF4500';
+      for (let obs of obstacles) {
+        ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
       }
     }
 
-    ui();
-    if(state.running) requestAnimationFrame(loop);
-  }
+    function gameLoop() {
+      update();
+      draw();
+      requestAnimationFrame(gameLoop);
+    }
 
-  // init
-  drawSplash(); ui();
-  document.getElementById('year').textContent = new Date().getFullYear();
-})();
-</script>
+    gameLoop();
+  </script>
 </body>
 </html>
